--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.12.7</version>
 		</dependency>
+		<!-- Maven -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 
 	</dependencies>
