--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret.key=thisisthefirstjwtdonebymeqqqqqqqqq
 server.servlet.context-path=/api/v1.0
+
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.username=9711ed001@smtp-brevo.com
+spring.mail.port=587
+spring.mail.password=62Uv5kfTVgsG1z0R
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.from=rounakgope50@gmail.com
