railway database added

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PageLoginJWT
-spring.datasource.url=jdbc:mysql://localhost:3306/athify
+spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:26822/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=yJixRSoqKHmlSIspZHjWpRsQvpNFFfcQ
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
