env added in properties

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=PageLoginJWT
-spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:26822/railway
-spring.datasource.username=root
-spring.datasource.password=yJixRSoqKHmlSIspZHjWpRsQvpNFFfcQ
+server.port=${PORT:8080}
 
+!spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:26822/railway
+!spring.datasource.username=root
+!spring.datasource.password=yJixRSoqKHmlSIspZHjWpRsQvpNFFfcQ
+!spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#Production
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -10,7 +16,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret.key=thisisthefirstjwtdonebymeqqqqqqqqq
-server.servlet.context-path=/api/v1.0
+#server.servlet.context-path=/api/v1.0
 
 spring.mail.host=smtp-relay.brevo.com
 spring.mail.username=9711ed001@smtp-brevo.com
